# PotatRaycer_CI-CD

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  Sortie_valgrind  a.out  clean_config.cfg  conf.cfg  config.cfg  config_lot.cfg  loadOBJ.cpp  logfile.txt  potato.cfg  raytracer  run_tests
.github/: mirroiring.yml
.github/workflows/: mirroiring.yml  unit_test.yml
Kyliann/: Hitable.h  Hitable_list.h  Main.cpp  Material.h  Ray.h  Sphere.h  Vec3.h  sdltemplate.h
docs/: logger.md  main_page.md  new_primitive.md  obj_explain.md  scene_file.md
docs/html/: AmbiantLight_8cpp.html  AmbiantLight_8cpp__incl.map  AmbiantLight_8cpp__incl.md5  AmbiantLight_8cpp_source.html  AmbiantLight_8hpp.html  AmbiantLight_8hpp__dep__incl.map  AmbiantLight_8hpp__dep__incl.md5  AmbiantLight_8hpp__incl.map  AmbiantLight_8hpp__incl.md5  AmbiantLight_8hpp_source.html  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8cpp_source.html  Camera_8hpp.html  Camera_8hpp__dep__incl.map  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.map  Camera_8hpp__incl.md5  Camera_8hpp_source.html  Circle_8cpp.html  Circle_8cpp__incl.map  Circle_8cpp__incl.md5  Circle_8cpp_source.html  Circle_8hpp.html  Circle_8hpp__dep__incl.map  Circle_8hpp__dep__incl.md5  Circle_8hpp__incl.map  Circle_8hpp__incl.md5  Circle_8hpp_source.html  Color_8cpp.html  Color_8cpp_source.html  Computing_8cpp.html  Computing_8cpp__incl.map  Computing_8cpp__incl.md5  Computing_8cpp_source.html  Computing_8hpp.html  Computing_8hpp__dep__incl.map  Computing_8hpp__dep__incl.md5  Computing_8hpp__incl.map  (+1047 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+89 more)
html/: Camera_8h_source.html  Hitable_8h_source.html  Hitable__list_8h_source.html  Material_8h_source.html  Parsing_8hpp_source.html  Ray_8h_source.html  Sphere_8h_source.html  Vec3_8h_source.html  annotated.html  classParsing-members.html  classParsing.html  classcamera-members.html  classcamera.html  classdielectric-members.html  classdielectric.html  classes.html  classhitable-members.html  classhitable.html  classhitable__list-members.html  classhitable__list.html  classlambertian-members.html  classlambertian.html  classmaterial-members.html  classmaterial.html  classmetal-members.html  classmetal.html  classray-members.html  classray.html  classsphere-members.html  classsphere.html  classvec3-members.html  classvec3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  sdltemplate_8h_source.html  structMaterial-members.html  (+7 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  searchdata.js
scenes/: clean_config.cfg  conf.cfg  config.cfg  config3_lightfromback.cfg  config_lot.cfg  config_potat.cfg  config_save.cfg  test.cfg
src/: Camera.h  Hitable.h  Hitable_list.h  Main.cpp  Material.h  Parsing.cpp  Ray.h  Vec3.h  a.out  image.ppm  include.hpp  struct.h
src/Builder/: IBuilder.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/Calculus/: Physics.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Color/: Color.cpp
src/Computing/: Computing.cpp  Computing.hpp
src/Core/: Core.cpp  Core.hpp
src/Decorator/: CalcDecorator.cpp  CalcDecorator.hpp  Decorator.cpp  Decorator.hpp  IDecorator.hpp  LightDecorator.hpp  MatDecorator.hpp  TintDecorator.hpp  idea.txt
src/Exceptions/: Exception.hpp  ObserverException.hpp
src/Light/: ILight.hpp  Light.cpp  Light.hpp
src/Light/Ambiant/: AmbiantLight.cpp  AmbiantLight.hpp
src/Light/Directional/: DirectionalLight.cpp  DirectionalLight.hpp
src/Logger/: Logger.hpp  SingletonLogger.cpp  SingletonLogger.hpp
src/Materials/: IMaterial.hpp
src/Materials/Dielectric/: Dielectric.cpp  Dielectric.hpp
src/Materials/Lambertian/: Lambertian.cpp  Lambertian.hpp
src/Materials/LightTexture/: LightTexture.cpp  LightTexture.hpp
src/Materials/Metal/: Metal.cpp  Metal.hpp
src/Materials/Stb_texture/: Texture.cpp  Texture.hpp
src/Observer/: FileWatcher.cpp  FileWatcher.hpp  FileWatcherSingleton.cpp  FileWatcherSingleton.hpp  IObserver.hpp  ISubject.hpp
src/Parsing/: Parsing.cpp  Parsing.hpp
src/Primitives/: IHitable.hpp
src/Primitives/Circle/: Circle.cpp  Circle.hpp
src/Primitives/Mesh/: Mesh.cpp  Mesh.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Vec2/: Vec2.hpp
src/Vec3/: Vec3.cpp  Vec3.hpp
test/: Camera.hpp  Computing.hpp  Decorator.hpp  Exception.hpp  IBuilder.hpp  IDecorator.hpp  IHitable.hpp  ILight.hpp  IMaterial.hpp  Light.d  Light.hpp  Logger.hpp  Makefile  Metal.hpp  Parsing.cpp  Parsing.d  Parsing.hpp  Ray.cpp  Ray.d  SceneBuilder.d  SceneBuilder.hpp  SingletonLogger.d  Sphere.cpp  Sphere.d  Sphere.hpp  Vec3.hpp  include.hpp  ratTests  struct.h  test_exception.cpp  test_exception.d  test_light.cpp  test_light.d  test_logger.cpp  test_logger.d  test_parsing.cpp  test_parsing.d  test_ray.cpp  test_scene.cpp  test_scene.d  (+7 more)
tests/: CMakeLists.txt  coverage_report.Exception.hpp.0947bdf0b83a009e084740e765db60aa.html  coverage_report.Vec3.hpp.3ca2bcba24ff8be0962e0cf6c8fc4fce.html  coverage_report.functions.html  coverage_report.html  coverage_report.test_exception.cpp.53ac7679fd277c606068732b72c6febf.html  coverage_report.test_vec3.cpp.044697649e4738fef54df498bc32cd93.html  run_tests  test_DirectionalLight.cpp  test_camera.cpp  test_directionalLight.cpp  test_exception.cpp  test_light.cpp  test_scenebuilder.cpp  test_sphere.cpp  test_vec3.cpp
(+6 files in other folders)
